--- a/p8105_hw5_xz3078.md
+++ b/p8105_hw5_xz3078.md
@@ -18,17 +18,6 @@ homicide_df =
   filter(city_state != "TulsaAL")
 ```
 
-    ## Rows: 52179 Columns: 12
-
-    ## -- Column specification --------------------------------------------------------
-    ## Delimiter: ","
-    ## chr (8): uid, victim_last, victim_first, victim_race, victim_sex, city, stat...
-    ## dbl (4): reported_date, victim_age, lat, lon
-
-    ## 
-    ## i Use `spec()` to retrieve the full column specification for this data.
-    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
 ``` r
 baltimore_df = 
   homicide_df %>%
@@ -70,7 +59,24 @@ results_df = homicide_df %>%
   select(city_state, tidy_results) %>%
   unnest(tidy_results) %>%
   select(city_state, estimate, starts_with("conf"))
+
+results_df
 ```
+
+    ## # A tibble: 50 x 4
+    ##    city_state    estimate conf.low conf.high
+    ##    <chr>            <dbl>    <dbl>     <dbl>
+    ##  1 AlbuquerqueNM    0.386    0.337     0.438
+    ##  2 AtlantaGA        0.383    0.353     0.415
+    ##  3 BaltimoreMD      0.646    0.628     0.663
+    ##  4 Baton RougeLA    0.462    0.414     0.511
+    ##  5 BirminghamAL     0.434    0.399     0.469
+    ##  6 BostonMA         0.505    0.465     0.545
+    ##  7 BuffaloNY        0.612    0.569     0.654
+    ##  8 CharlotteNC      0.300    0.266     0.336
+    ##  9 ChicagoIL        0.736    0.724     0.747
+    ## 10 CincinnatiOH     0.445    0.408     0.483
+    ## # ... with 40 more rows
 
 ``` r
 results_df %>%
@@ -100,8 +106,7 @@ values = output %>%
 
 data = tibble(file_name, values) %>% 
   separate(files, into = c("arm", "id"), sep = "\\_") %>%
-  mutate(id = str_replace(id, "\\.csv", ""),
-         id = as.numeric(id)) %>%
+  mutate(id = str_replace(id, "\\.csv", "")) %>%
   pivot_longer(
     week_1:week_8,
     names_to = "week", 
@@ -111,30 +116,17 @@ data = tibble(file_name, values) %>%
   select(arm_id, everything())
 
 data %>% 
-  group_by(arm_id) %>%
-  ggplot(aes(x = week, y = observation, color = arm_id)) + 
-    geom_point(alpha = .5) + 
-    geom_line()
+  ggplot(aes(x = week, y = observation, group = arm_id, color = arm)) + 
+    geom_line() + 
+    labs(title = "“spaghetti” plot of observations on each subject over time")
 ```
-
-    ## geom_path: Each group consists of only one observation. Do you need to adjust
-    ## the group aesthetic?
 
 ![](p8105_hw5_xz3078_files/figure-gfm/unnamed-chunk-5-1.png)<!-- -->
 
-``` r
-    labs(title = "“spaghetti” plot of average value over time",
-         y = "mean value")
-```
-
-    ## $y
-    ## [1] "mean value"
-    ## 
-    ## $title
-    ## [1] "“spaghetti” plot of average value over time"
-    ## 
-    ## attr(,"class")
-    ## [1] "labels"
+We can see from the plot that experiment groups seem to have higher
+growth in observations over 8 weeks than control groups. There are not
+much changes in control groups over time. At week 7 and week 8, the
+observations of all experiment groups are higher than control groups.
 
 ## Problem 3
 
@@ -143,5 +135,39 @@ set.seed(10)
 
 iris_with_missing = iris %>% 
   map_df(~replace(.x, sample(1:150, 20), NA)) %>%
-  mutate(Species = as.character(Species))
+  mutate(Species = as.character(Species)) %>%
+  janitor::clean_names()
 ```
+
+``` r
+replace_missing = function(x) {
+  
+  if(is.numeric(x)) {
+    x = ifelse(is.na(x), mean(x, na.rm = TRUE), x)
+  }
+  
+  if(is.character(x)) {
+     x = ifelse(is.na(x), "virginica", x)
+  }
+  
+  return(x)
+  
+}
+
+map_df(iris_with_missing, replace_missing)
+```
+
+    ## # A tibble: 150 x 5
+    ##    sepal_length sepal_width petal_length petal_width species
+    ##           <dbl>       <dbl>        <dbl>       <dbl> <chr>  
+    ##  1         5.1          3.5         1.4         0.2  setosa 
+    ##  2         4.9          3           1.4         0.2  setosa 
+    ##  3         4.7          3.2         1.3         0.2  setosa 
+    ##  4         4.6          3.1         1.5         1.19 setosa 
+    ##  5         5            3.6         1.4         0.2  setosa 
+    ##  6         5.4          3.9         1.7         0.4  setosa 
+    ##  7         5.82         3.4         1.4         0.3  setosa 
+    ##  8         5            3.4         1.5         0.2  setosa 
+    ##  9         4.4          2.9         1.4         0.2  setosa 
+    ## 10         4.9          3.1         3.77        0.1  setosa 
+    ## # ... with 140 more rows
