--- a/p8105_hw5_xz3078.md
+++ b/p8105_hw5_xz3078.md
@@ -115,6 +115,25 @@ data = tibble(file_name, values) %>%
   mutate(arm_id = str_c(arm, id)) %>%
   select(arm_id, everything())
 
+data
+```
+
+    ## # A tibble: 160 x 5
+    ##    arm_id arm   id    week   observation
+    ##    <chr>  <chr> <chr> <chr>        <dbl>
+    ##  1 con01  con   01    week_1        0.2 
+    ##  2 con01  con   01    week_2       -1.31
+    ##  3 con01  con   01    week_3        0.66
+    ##  4 con01  con   01    week_4        1.96
+    ##  5 con01  con   01    week_5        0.23
+    ##  6 con01  con   01    week_6        1.09
+    ##  7 con01  con   01    week_7        0.05
+    ##  8 con01  con   01    week_8        1.94
+    ##  9 con02  con   02    week_1        1.13
+    ## 10 con02  con   02    week_2       -0.88
+    ## # ... with 150 more rows
+
+``` r
 data %>% 
   ggplot(aes(x = week, y = observation, group = arm_id, color = arm)) + 
     geom_line() + 
